@@ -46,6 +46,7 @@ Version 6.7 - not yet released
 * calculations
   - add more weight to zig-zag wind compared to circling wind
   - enable circling wind calculation in IGC replay (#2672)
+  - fix OLC triangle display (#2775)
 * waypoint editor
   - delete waypoint implemented
   - CUP file support added
